--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
   <script src="firebase-config.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+  <style>
+    body {
+      background-image: url('BG_Branco_Diguinho.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      font-family: sans-serif;
+    }
+    h1, h2, label, strong {
+      color: #000;
+    }
+    input, select, button {
+      margin: 5px;
+    }
+    #form {
+      margin-bottom: 20px;
+    }
+    div {
+      background-color: rgba(255, 255, 255, 0.85);
+      padding: 10px;
+      border-radius: 10px;
+    }
+  </style>
 </head>
 <body>
   <h1>Painel de Pontuação</h1>
