--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <style>
     body {
-      background-image: url('BG_Branco_Diguinho.png');
+      background-image: url('https://willianpesenti.github.io/jogadorespontuacao/BG_Branco_Diguinho.png');
+
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
