--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Painel de Jogadores com Crop</title>
 
-  <!-- Fonte Averta + CropperJS -->
+  <!-- Fonte + Cropper -->
   <link href="https://fonts.cdnfonts.com/css/averta" rel="stylesheet">
   <link href="https://unpkg.com/cropperjs/dist/cropper.min.css" rel="stylesheet" />
 
@@ -15,30 +15,22 @@
       margin: 0;
       padding: 20px;
     }
-
-    h1 {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
+    h1 { text-align: center; }
     .jogador {
       background: white;
       border: 1px solid #ccc;
       padding: 10px;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
       border-radius: 8px;
     }
-
     img.thumb {
       width: 100px;
       height: auto;
       margin-right: 10px;
     }
-
     button {
-      margin: 5px;
+      margin: 4px;
     }
-
     #cropperModal {
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
@@ -48,11 +40,9 @@
       align-items: center;
       z-index: 9999;
     }
-
     #cropperModal img {
       max-height: 80vh;
     }
-
     #cropperContainer {
       background: white;
       padding: 20px;
@@ -64,7 +54,7 @@
   <h1>Painel de Jogadores</h1>
   <div id="painelJogadores"></div>
 
-  <!-- Modal de Crop -->
+  <!-- Modal Crop -->
   <div id="cropperModal">
     <div id="cropperContainer">
       <img id="cropImage" src="" />
@@ -91,27 +81,33 @@
     let cropper = null;
     let jogadorRefAtual = null;
     let tipoImagemAtual = "";
+    let jogadorIdAtual = "";
+
+    const imagemPadrao = "https://via.placeholder.com/100x160.png?text=Vazio";
 
     function carregarJogadores() {
       db.ref("jogadores").on("value", snapshot => {
         painel.innerHTML = '';
         const jogadores = snapshot.val();
+        if (!jogadores) return;
+
         for (const id in jogadores) {
           const j = jogadores[id];
           const div = document.createElement('div');
           div.className = 'jogador';
+
           div.innerHTML = `
             <h3>${j.nome} (${j.time})</h3>
-            <p>Pontuação: ${j.pontuacao}</p>
+            <p>Pontuação: ${j.pontuacao || 0}</p>
 
-            <img src="${j.url_triste || ''}" id="img_${id}_triste" class="thumb">
-            <button onclick="editarImagem('${id}', 'url_triste', '${j.url_triste || ''}')">Editar Triste</button><br>
+            <img src="${j.url_triste || imagemPadrao}" id="img_${id}_triste" class="thumb">
+            <button onclick="editarImagem('${id}', 'url_triste', '${j.url_triste || imagemPadrao}')">Editar Triste</button><br>
 
-            <img src="${j.url_neutro || ''}" id="img_${id}_neutro" class="thumb">
-            <button onclick="editarImagem('${id}', 'url_neutro', '${j.url_neutro || ''}')">Editar Neutro</button><br>
+            <img src="${j.url_neutro || imagemPadrao}" id="img_${id}_neutro" class="thumb">
+            <button onclick="editarImagem('${id}', 'url_neutro', '${j.url_neutro || imagemPadrao}')">Editar Neutro</button><br>
 
-            <img src="${j.url_feliz || ''}" id="img_${id}_feliz" class="thumb">
-            <button onclick="editarImagem('${id}', 'url_feliz', '${j.url_feliz || ''}')">Editar Feliz</button>
+            <img src="${j.url_feliz || imagemPadrao}" id="img_${id}_feliz" class="thumb">
+            <button onclick="editarImagem('${id}', 'url_feliz', '${j.url_feliz || imagemPadrao}')">Editar Feliz</button>
           `;
           painel.appendChild(div);
         }
@@ -119,10 +115,11 @@
     }
 
     function editarImagem(id, campo, url) {
+      jogadorRefAtual = db.ref("jogadores/" + id);
+      jogadorIdAtual = id;
+      tipoImagemAtual = campo;
       imageToCrop.src = url;
       modal.style.display = 'flex';
-      tipoImagemAtual = campo;
-      jogadorRefAtual = db.ref("jogadores/" + id);
 
       imageToCrop.onload = () => {
         if (cropper) cropper.destroy();
@@ -137,11 +134,11 @@
       if (cropper) {
         const canvas = cropper.getCroppedCanvas({ width: 1080, height: 1920 });
         const base64 = canvas.toDataURL("image/jpeg");
-
         jogadorRefAtual.update({ [tipoImagemAtual]: base64 });
-        const id = jogadorRefAtual.key;
-        const imgId = `img_${id}_${tipoImagemAtual.replace("url_", "")}`;
-        document.getElementById(imgId).src = base64;
+
+        const campo = tipoImagemAtual.replace("url_", "");
+        document.getElementById(`img_${jogadorIdAtual}_${campo}`).src = base64;
+
         closeCrop();
       }
     }
