--- a/visualizacao.html
+++ b/visualizacao.html
@@ -2,64 +2,87 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Visualização OBS</title>
-
-  <!-- Fonte Averta via CDN -->
-  <link href="https://fonts.cdnfonts.com/css/averta" rel="stylesheet">
-
-  <!-- Firebase -->
-  <script src="firebase-config.js"></script>
+  <title>Visualização do Jogador</title>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 
   <style>
-    body {
+    * {
       margin: 0;
-      background: black;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      background-color: black;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       height: 100vh;
-      color: white;
-      font-family: 'Averta', sans-serif;
+      font-family: sans-serif;
     }
 
-    #pontuacao {
+    .container {
+      width: 100vw;
+      height: 100vh;
+      aspect-ratio: 9 / 16;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    .pontuacao {
+      position: absolute;
+      top: 30px;
+      width: 100%;
+      text-align: center;
       font-size: 120px;
-      margin-bottom: 20px;
-    }
-
-    img {
-      max-height: 80vh;
-      max-width: 100%;
+      font-weight: bold;
+      color: white;
+      text-shadow: 3px 3px 10px black;
     }
   </style>
 </head>
 <body>
-  <div id="pontuacao">--</div>
-  <img id="foto" src="" alt="Foto do jogador">
+  <div class="container">
+    <div class="pontuacao" id="pontuacao">0</div>
+    <img id="imagem" src="">
+  </div>
 
   <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyBGAt4hPAai7y-Q4BCXrynQMV3uzYzpFuQ",
+      authDomain: "pontuacao-jogadores.firebaseapp.com",
+      databaseURL: "https://pontuacao-jogadores-default-rtdb.firebaseio.com",
+      projectId: "pontuacao-jogadores",
+      storageBucket: "pontuacao-jogadores.firebasestorage.app",
+      messagingSenderId: "838596739133",
+      appId: "1:838596739133:web:b88ecacd10d6d2c7016a54"
+    };
+
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
     const urlParams = new URLSearchParams(window.location.search);
-    const nome = urlParams.get("jogador");
-    const pontuacaoEl = document.getElementById("pontuacao");
-    const fotoEl = document.getElementById("foto");
+    const nome = urlParams.get('jogador');
 
     db.ref("jogadores/" + nome).on("value", snapshot => {
-      const j = snapshot.val();
-      if (!j) return;
+      const data = snapshot.val();
+      if (data) {
+        document.getElementById("pontuacao").innerText = data.pontuacao;
 
-      pontuacaoEl.innerText = j.pontuacao;
+        let imagemUrl = data.url_neutro;
+        if (data.pontuacao > 0) imagemUrl = data.url_feliz;
+        if (data.pontuacao < 0) imagemUrl = data.url_triste;
 
-      let estado = "url_neutro";
-      if (j.pontuacao <= 50) estado = "url_triste";
-      else if (j.pontuacao > 70) estado = "url_feliz";
-
-      fotoEl.src = j[estado];
+        document.getElementById("imagem").src = imagemUrl;
+      }
     });
   </script>
 </body>
