--- a/visualizacao.html
+++ b/visualizacao.html
@@ -1,87 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Visualização do Jogador</title>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
-
+  <script src="firebase-config.js"></script>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
       background-color: black;
+      margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      font-family: sans-serif;
     }
 
-    .container {
-      width: 100vw;
-      height: 100vh;
-      aspect-ratio: 9 / 16;
+    #container {
+      width: 360px;
+      height: 640px;
       position: relative;
-      overflow: hidden;
     }
 
-    .container img {
+    #imagemJogador {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      display: block;
     }
 
-    .pontuacao {
+    #pontuacao {
       position: absolute;
-      top: 30px;
+      top: 20px;
+      left: 0;
       width: 100%;
       text-align: center;
-      font-size: 120px;
-      font-weight: bold;
       color: white;
-      text-shadow: 3px 3px 10px black;
+      font-size: 80px;
+      font-family: 'Arial Black', sans-serif;
+      text-shadow: 3px 3px 8px black;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="pontuacao" id="pontuacao">0</div>
-    <img id="imagem" src="">
+  <div id="container">
+    <div id="pontuacao">0</div>
+    <img id="imagemJogador" src="" alt="Imagem do Jogador">
   </div>
 
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBGAt4hPAai7y-Q4BCXrynQMV3uzYzpFuQ",
-      authDomain: "pontuacao-jogadores.firebaseapp.com",
-      databaseURL: "https://pontuacao-jogadores-default-rtdb.firebaseio.com",
-      projectId: "pontuacao-jogadores",
-      storageBucket: "pontuacao-jogadores.firebasestorage.app",
-      messagingSenderId: "838596739133",
-      appId: "1:838596739133:web:b88ecacd10d6d2c7016a54"
-    };
+    const urlParams = new URLSearchParams(window.location.search);
+    const nome = urlParams.get("jogador");
 
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    const urlParams = new URLSearchParams(window.location.search);
-    const nome = urlParams.get('jogador');
+    const img = document.getElementById("imagemJogador");
+    const pontuacao = document.getElementById("pontuacao");
 
     db.ref("jogadores/" + nome).on("value", snapshot => {
-      const data = snapshot.val();
-      if (data) {
-        document.getElementById("pontuacao").innerText = data.pontuacao;
-
-        let imagemUrl = data.url_neutro;
-        if (data.pontuacao > 0) imagemUrl = data.url_feliz;
-        if (data.pontuacao < 0) imagemUrl = data.url_triste;
-
-        document.getElementById("imagem").src = imagemUrl;
+      const j = snapshot.val();
+      if (j) {
+        let imagemUrl = j.url_neutro;
+        if (j.pontuacao > 7) {
+          imagemUrl = j.url_feliz;
+        } else if (j.pontuacao < 4) {
+          imagemUrl = j.url_triste;
+        }
+        img.src = imagemUrl;
+        pontuacao.textContent = j.pontuacao;
       }
     });
   </script>
